// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BTP FN Components/Card Card 1`] = `
<div
  dir="ltr"
>
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__header"
    >
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
            
      </div>
      
    
    </div>
    

    <div
      class="fn-card__content"
    />
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__header"
    >
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
                
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
            
      </div>
      
        
    </div>
    

    <div
      class="fn-card__content"
    />
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__header"
    >
      
            
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
            
      </div>
      
            
      <div
        class="fn-card__actions-container"
      >
        
                
        <button
          class="fn-button fn-button--secondary"
        >
          
                    
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
                
        </button>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-card__content"
    />
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__header"
    >
      
            
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
                
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-card__content"
    />
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__header"
    >
      
            
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
                
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
            
      </div>
      
            
      <div
        class="fn-card__actions-container"
      >
        
                
        <button
          class="fn-button fn-button--secondary"
        >
          
                    
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
                
        </button>
        
                
        <button
          class="fn-button fn-button--secondary"
        >
          
                    
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
                
        </button>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-card__content"
    />
    
    
  </div>
  

</div>
`;

exports[`Storyshots BTP FN Components/Card Data Card 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fn-card fn-card--data"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content"
    />
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      :hover
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data is-hover"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
            
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content"
    />
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      :selected
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data is-selected"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content"
    />
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      :focus
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data is-focus"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
            
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content"
    />
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      title and subtitle with very long text (default behaviour: no truncate)
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </h1>
        
            
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle et enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
        </p>
        
        
      </div>
      
        
      <div
        class="fn-card__actions-container"
      >
        
            
        <button
          class="fn-button fn-button--secondary"
        >
          
                
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
            
        </button>
        
            
        <button
          class="fn-button fn-button--secondary"
        >
          
                
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content"
    >
      
        
      <ul
        class="fn-list"
      >
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      container with no padding and truncate for the title and subtitle
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title fn-card__title--truncate"
        >
          Card Title lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </h1>
        
            
        <p
          class="fn-card__subtitle fn-card__subtitle--truncate"
        >
          Card Subtitle et enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
        </p>
        
        
      </div>
      
        
      <div
        class="fn-card__actions-container"
      >
        
            
        <button
          class="fn-button fn-button--secondary"
        >
          
                
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
            
        </button>
        
            
        <button
          class="fn-button fn-button--secondary"
        >
          
                
          <span
            class="fn-button__text"
          >
            Button
          </span>
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content fn-card__content--no-padding"
    >
      
        
      <ul
        class="fn-list"
      >
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 1rem;"
  >
    <b>
      container with vertical scroll
    </b>
  </div>
  

  <div
    class="fn-card fn-card--data"
    style="max-width: 40rem"
    tabindex="0"
  >
    
    
    <div
      class="fn-card__header"
    >
      
        
      <span
        class="fn-icon fn-icon--sys-help-2"
        style="background: #0070F2; width: 18px; height: 18px"
      />
      
        
      <div
        class="fn-card__title-container"
      >
        
            
        <h1
          class="fn-card__title"
        >
          Card Title
        </h1>
        
            
        <p
          class="fn-card__subtitle"
        >
          Card Subtitle
        </p>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card__content fn-card__content--scroll"
      style="max-height: 250px;"
    >
      
        
      <ul
        class="fn-list"
      >
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
            
        <li
          class="fn-list__item"
          tabindex="0"
        >
          
                
          <span
            class="fn-list__text"
          >
            List Item
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    

  </div>
  

</div>
`;
